[Assignment 1] cleanup and make it work for Java 8